--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=neoapi
+maven.compiler.somvnurce=1.8
+maven.compiler.source=1.8
 nasa.apikey=4vgoZLqW4bXSQzU9wnfMsXpYmpZSQ7wYhCUyi6Iw
 nasa.baseurl=https://api.nasa.gov/neo/rest/v1/
